# p2p-messanger

./: CMakeLists.txt  README.md
.cache/clangd/index/: crypto.cpp.F0E3D7A0974629C0.idx  crypto.hpp.5D10B7F5B4BE94B2.idx  crypto_tests.cpp.4686817EF5AE3817.idx
include/crypto/: crypto.hpp
include/network/: network.hpp  peer_connection.hpp
src/crypto/: crypto.cpp
src/network/: network.cpp  peer_connection.cpp
src/ui/: console_client.cpp
tests/: crypto_tests.cpp  network_tests.cpp
